--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
     <link rel="manifest" href="site.webmanifest">
     <!-- Add the SEO meta tags here -->
     <meta name="description"
-        content=" Hashirkx04 is Web developer & AI specialist based in Pakistan. Expertise in WordPress, eCommerce websites, AI agents, automations, and Replit-based AI apps.">
+        content=" Hashirkx045 is Web developer with Canva Designer and AI Automation & AI Workflow Automation specialist based in Pakistan. Expertise in WordPress, eCommerce websites, AI agents, automations, and Replit-based AI apps.">
     <meta name="keywords"
-        content=" Hashirkx04 web developer, AI specialist, WordPress developer, Pakistan, eCommerce websites, AI automation, web development, AI integration, portfolio">
-    <meta name="author" content="Hashirkx04">
+        content=" Hashirkx045 Web developer, AI specialist, WordPress developer, Pakistan, eCommerce websites, AI Automation, Workflow Automation , Web development, AI integration, portfolio">
+    <meta name="author" content="Hashirkx045">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://hashirkx04.github.io/">
+    <meta property="og:url" content="https://hashirkx045.github.io/">
     <meta property="og:title" content="HASHIR KHAN">
     <meta property="og:description"
-        content="Hashirkx04 Web developer & AI specialist based in Pakistan. Expertise in WordPress, eCommerce websites, AI agents, automations, and Replit-based AI apps.">
-    <meta property="og:image" content="https://hashirkx04.github.io/images/social-preview.jpg">
+        content="Hashirkx045 is Web developer with Canva Designer and AI Automation & AI Workflow Automation specialist based in Pakistan. Expertise in WordPress, eCommerce websites, AI agents, automations, and Replit-based AI apps.">
+    <meta property="og:image" content="https://hashirkx045.github.io/images/social-preview.jpg">
 
     <!-- instagram Card Tags -->
     <meta property="instagram:card" content="summary_large_image">
-    <meta property="instagram:url" content="https://hashirkx04.github.io/">
+    <meta property="instagram:url" content="https://hashirkx045.github.io/">
     <meta property="instagram:title" content="HASHIR KHAN">
     <meta property="instagram:description"
-        content=" Hashirkx04 Web developer & AI specialist based in Pakistan. Expertise in WordPress, eCommerce websites, AI agents, automations, and Replit-based AI apps.">
-    <meta property="instagram:image" content="https://hashirkx04.github.io/images/social-preview.jpg">
+        content=" Hashirkx045 is Web developer with Canva Designer and AI Automation & AI Workflow Automation specialist based in Pakistan. Expertise in WordPress, eCommerce websites, AI agents, automations, and Replit-based AI apps.">
+    <meta property="instagram:image" content="https://hashirkx045.github.io/images/social-preview.jpg">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://hashirkx04.github.io/">
+    <link rel="canonical" href="https://hashirkx045.github.io/">
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#FF7B35">
@@ -46,20 +46,22 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Hashir Khan",
-      "alternateName": "Hashirkx04",
-      "description": "Web developer & AI specialist based in Pakistan",
-      "url": "https://hashirkx04.github.io/",
-      "image": "https://hashirkx04.github.io/hashirkhan.png",
-      "jobTitle": "Web Developer & AI Specialist",
+      "alternateName": "Hashirkx045",
+      "description": "Hashirkx045 is Web developer with Canva Designer and AI Automation & AI Workflow Automation specialist based in Pakistan.",
+      "url": "https://hashirkx045.github.io/",
+      "image": "https://hashirkx045.github.io/hashirkhan.png",
+      "jobTitle": "Web Developer with Canva Designer and AI Automation & AI Workflow Automation ",
       "worksFor": {
         "@type": "Organization",
         "name": "Hashir Khan Ltd."
       },
       "sameAs": [
-        "https://www.facebook.com/Hashirkx04/",
-        "https://github.com/hashirkx04",
-        "https://www.linkedin.com/in/hashirkx04/",
-        "https://instagram.com/hashirkx04"
+        "https://www.facebook.com/Hashirkx045/",
+        "https://github.com/hashirkx045",
+        "https://www.linkedin.com/in/hashirkx045/",
+        "https://instagram.com/hashirkx045",
+        "https://www.fiverr.com/hashirkx045?public_mode=true",
+        "https://www.binance.com/en/square/profile/cryptos-market-updates"
       ]
     }
     </script>
@@ -123,10 +125,10 @@
         </nav>
 
         <div class="sidebar-social-icons">
-            <a href="https://www.linkedin.com/in/hashirkx04/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/Hashirkx04" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.facebook.com/Hashirkx04/"><i class="fab fa-facebook " target="_blank"></i></a>
-            <a href="https://www.instagram.com/hashirkx04/profilecard/?igsh=NTh4d291NXc5bjJx" target="_blank"><i
+            <a href="https://www.linkedin.com/in/hashirkx045/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/Hashirkx045" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/Hashirkx045/"><i class="fab fa-facebook " target="_blank"></i></a>
+            <a href="https://www.instagram.com/hashirkx045/profilecard/?igsh=NTh4d291NXc5bjJx" target="_blank"><i
                     class="fab fa-instagram"></i></a>
         </div>
 
@@ -175,10 +177,10 @@
         </nav>
 
         <div class="sidebar-social-icons">
-            <a href="https://www.linkedin.com/in/hashirkx04/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/Hashirkx04" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.facebook.com/Hashirkx04/"><i class="fab fa-facebook " target="_blank"></i></a>
-            <a href="https://www.instagram.com/hashirkx04/profilecard/?igsh=NTh4d291NXc5bjJx" target="_blank"><i
+            <a href="https://www.linkedin.com/in/hashirkx045/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/Hashirkx045" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/Hashirkx045/"><i class="fab fa-facebook " target="_blank"></i></a>
+            <a href="https://www.instagram.com/hashirkx045/profilecard/?igsh=NTh4d291NXc5bjJx" target="_blank"><i
                     class="fab fa-instagram"></i></a>
         </div>
 
@@ -200,8 +202,8 @@
         <!-- Home Section -->
         <section id="home" class="hero">
             <h1>HELLO,</h1>
-            <p>I'm Hashir Khan, a web developer and AI specialist based in Pakistan. With years of experience in
-                WordPress development, eCommerce websites, AI agents, automations, and Replit-based AI apps, I create
+            <p>I'm Hashir Khan, a Web & Wordpress developer with Canva Designer and  AI Automation & Workflow Automation based in Pakistan. With years of experience in
+                WordPress developer, eCommerce websites, AI agents, AI Automation, Workflow Automation and Replit-based AI apps, I create
                 responsive and intelligent digital solutions that help businesses grow. I specialize in building
                 business portfolio websites, customized online stores, and smart automation workflows. I'm committed to
                 delivering high-quality work, clear communication, and exceeding client expectations. Let's work
@@ -219,13 +221,13 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>Creating digital experiences that matter</h2>
-                    <p>I'm Hashir Khan, a Web Developer and AI Specialist with a passion for creating innovative digital
-                        solutions. With 2 Years of experience in the industry, I've helped numerous clients bring their
+                    <p>I'm Hashir Khan, a Web & Wordpress Developer with Canva Designer and  AI Automation & Workflow Automation with a passion for creating innovative digital
+                        solutions. With 2 Years of experience in the  Wordpress Developer industry, I've helped numerous clients bring their
                         ideas to life through modern, responsive, and intelligent websites.</p>
 
-                    <p>My expertise includes WordPress development (business portfolio websites, custom themes, and
+                    <p>My expertise includes WordPress developer (business portfolio websites, custom themes, and
                         clone websites), building responsive eCommerce stores with animations, and delivering AI-powered
-                        solutions. I also specialize in AI agents, automation workflows, and Replit-based AI websites
+                        solutions. I also specialize in AI agents, AI Automation & Workflow Automation, and Replit-based AI websites
                         and apps, enabling businesses to scale with smart technology.</p>
 
                     <p>I'm committed to delivering high-quality work that exceeds expectations by combining creativity,
@@ -274,7 +276,7 @@
                     <div class="service-icon">
                         <i class="fab fa-wordpress"></i>
                     </div>
-                    <h3>WordPress Development</h3>
+                    <h3>WordPress Developer</h3>
                     <p>Custom WordPress themes, plugins, and full website development with WooCommerce integration.</p>
                 </div>
                 <div class="service-card">
@@ -302,7 +304,7 @@
                 <div class="timeline">
                     <div class="timeline-item">
                         <div class="timeline-date">2019 - Present</div>
-                        <h3 class="timeline-role">Senior Web Developer</h3>
+                        <h3 class="timeline-role">Senior Web & Wordpress Developer</h3>
                         <div class="timeline-company">Tech Innovations Ltd, Pakistan</div>
                         <div class="timeline-desc">
                             <ul>
@@ -321,7 +323,7 @@
                         <div class="timeline-company">Data Solutions Inc, Pakistan</div>
                         <div class="timeline-desc">
                             <ul>
-                                <li>Designed and deployed AI automations for business operations</li>
+                                <li>Designed and deployed AI Automation & Workflow Automation for business operations</li>
                                 <li>Integrated AI agents into websites and customer platforms</li>
                                 <li>Built natural language processing systems for automated support</li>
                                 <li>Created intelligent workflows combining AI features with web applications</li>
@@ -331,7 +333,7 @@
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-date">2019 - 2023</div>
-                        <h3 class="timeline-role">Web Developer</h3>
+                        <h3 class="timeline-role">Web & Wordpress Developer</h3>
                         <div class="timeline-company">Creative Web Agency, Pakistan</div>
                         <div class="timeline-desc">
                             <ul>
@@ -347,9 +349,9 @@
                     <h3>Skills & Expertise</h3>
                     <ul class="skills-list">
                         <li><i class="fab fa-html5"></i> HTML5, CSS3</li>
-                        <li><i class="fas fa-laptop-code"></i> Web Developer</li>
-                        <li><i class="fab fa-wordpress"></i> WordPress, Shopify</li>
-                        <li><i class="fas fa-robot"></i> AI Agents & Automations</li>
+                        <li><i class="fas fa-laptop-code"></i> WordPress Developer</li>
+                        <li><i class="fab fa-wordpress"></i> Web , Shopify</li>
+                        <li><i class="fas fa-robot"></i> AI Automation & Workflow Automation </li>
                         <li><i class="fas fa-paint-brush"></i> UI/UX Design</li>
                         <li><i class="fas fa-mobile-alt"></i> Responsive Design</li>
                         <li><i class="fas fa-search"></i> Basic SEO Optimization</li>
@@ -425,7 +427,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                             </div>
-                            <p class="testimonial-text">Hashir's expertise in web development is unmatched. He
+                            <p class="testimonial-text">Hashir's expertise in Web & Wordpress Developer is unmatched. He
                                 transformed our outdated website into a modern, responsive platform that perfectly
                                 represents our brand. The process was smooth and professional.</p>
                         </div>
@@ -801,5 +803,6 @@
 
     </script>
 </body>
+
 
 </html>
